--- a/notebooks/1_0_RH_Initial_notebook.ipynb
+++ b/notebooks/1_0_RH_Initial_notebook.ipynb
@@ -6,7 +6,7 @@
       "name": "1.0_RH_Initial_notebook.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6JYkWVipSyv89ENb9GSAL",
+      "authorship_tag": "ABX9TyPxJtoI06RFeVfrxEAIK2J7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -389,7 +389,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "asdfasdf"
       ],
       "metadata": {
         "id": "M1JAD1CULOzz"
