--- a/notebooks/ivan/1.0-im-experimental.ipynb
+++ b/notebooks/ivan/1.0-im-experimental.ipynb
@@ -336,12 +336,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## TensorFlow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +361,9 @@
     "import cv2\n",
     "from tensorflow.keras.applications import VGG16, InceptionResNetV2\n",
     "from keras import regularizers\n",
-    "from tensorflow.keras.optimizers import Adam,RMSprop,SGD,Adamax"
+    "from tensorflow.keras.optimizers import Adam,RMSprop,SGD,Adamax\n",
+    "\n",
+    "# from PIL import Image"
    ]
   },
   {
@@ -606,15 +615,6 @@
    ],
    "source": [
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image"
    ]
   },
   {
