--- a/notebooks/chikako/PCA.ipynb
+++ b/notebooks/chikako/PCA.ipynb
@@ -2,13 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "id": "49909b8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "import cv2\n",
+    "# import cv2\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f1193c74",
    "metadata": {},
    "outputs": [
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "3719ab63",
    "metadata": {},
    "outputs": [],
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "112fa2b4",
    "metadata": {},
    "outputs": [],
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "83375bc9",
    "metadata": {},
    "outputs": [
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "5ef9fee6",
    "metadata": {},
    "outputs": [],
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1ab2baf1",
    "metadata": {},
    "outputs": [],
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3f2d15e3",
    "metadata": {},
    "outputs": [],
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "461fc656",
    "metadata": {},
    "outputs": [
@@ -490,7 +498,7 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a96119a7",
    "metadata": {},
    "outputs": [
@@ -707,13 +715,33 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1137bfaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv('train.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a72cdf7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv('test.csv',index=False)"
    ]
   },
   {
@@ -2784,7 +2812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
