Previously commited srong CNN example

--- a/notebooks/chikako/Basic MLs.ipynb
+++ b/notebooks/chikako/Basic MLs.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -59,10 +59,7 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "  <div id=\"df-bb73dfbc-a801-47c5-b6a2-6d3a4590ff3e\">\n",
-       "    <div class=\"colab-df-container\">\n",
-       "      <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -227,83 +224,7 @@
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 2305 columns</p>\n",
-       "</div>\n",
-       "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb73dfbc-a801-47c5-b6a2-6d3a4590ff3e')\"\n",
-       "              title=\"Convert this dataframe to an interactive table.\"\n",
-       "              style=\"display:none;\">\n",
-       "        \n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-       "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-       "  </svg>\n",
-       "      </button>\n",
-       "      \n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      flex-wrap:wrap;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "      <script>\n",
-       "        const buttonEl =\n",
-       "          document.querySelector('#df-bb73dfbc-a801-47c5-b6a2-6d3a4590ff3e button.colab-df-convert');\n",
-       "        buttonEl.style.display =\n",
-       "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "        async function convertToInteractive(key) {\n",
-       "          const element = document.querySelector('#df-bb73dfbc-a801-47c5-b6a2-6d3a4590ff3e');\n",
-       "          const dataTable =\n",
-       "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                     [key], {});\n",
-       "          if (!dataTable) return;\n",
-       "\n",
-       "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "            + ' to learn more about interactive tables.';\n",
-       "          element.innerHTML = '';\n",
-       "          dataTable['output_type'] = 'display_data';\n",
-       "          await google.colab.output.renderOutput(dataTable, element);\n",
-       "          const docLink = document.createElement('div');\n",
-       "          docLink.innerHTML = docLinkHtml;\n",
-       "          element.appendChild(docLink);\n",
-       "        }\n",
-       "      </script>\n",
-       "    </div>\n",
-       "  </div>\n",
-       "  "
+       "</div>"
       ],
       "text/plain": [
        "   feature 0  feature 1  feature 2  feature 3  feature 4  feature 5  \\\n",
@@ -343,15 +264,14 @@
     }
    ],
    "source": [
-    "train_csv = open('/content/gdrive/My Drive/Colab Notebooks/ML/data/train.csv')\n",
-    "df_train = pd.read_csv(train_csv)\n",
+    "df_train = pd.read_csv('../../data/external/train.csv')\n",
     "print(df_train.shape) # (28698, 2305)\n",
     "df_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -381,10 +301,7 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "  <div id=\"df-5e6076d4-4778-4d7a-8a03-dd5e269e6968\">\n",
-       "    <div class=\"colab-df-container\">\n",
-       "      <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -549,83 +466,7 @@
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 2305 columns</p>\n",
-       "</div>\n",
-       "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5e6076d4-4778-4d7a-8a03-dd5e269e6968')\"\n",
-       "              title=\"Convert this dataframe to an interactive table.\"\n",
-       "              style=\"display:none;\">\n",
-       "        \n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-       "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-       "  </svg>\n",
-       "      </button>\n",
-       "      \n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      flex-wrap:wrap;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "      <script>\n",
-       "        const buttonEl =\n",
-       "          document.querySelector('#df-5e6076d4-4778-4d7a-8a03-dd5e269e6968 button.colab-df-convert');\n",
-       "        buttonEl.style.display =\n",
-       "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "        async function convertToInteractive(key) {\n",
-       "          const element = document.querySelector('#df-5e6076d4-4778-4d7a-8a03-dd5e269e6968');\n",
-       "          const dataTable =\n",
-       "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                     [key], {});\n",
-       "          if (!dataTable) return;\n",
-       "\n",
-       "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "            + ' to learn more about interactive tables.';\n",
-       "          element.innerHTML = '';\n",
-       "          dataTable['output_type'] = 'display_data';\n",
-       "          await google.colab.output.renderOutput(dataTable, element);\n",
-       "          const docLink = document.createElement('div');\n",
-       "          docLink.innerHTML = docLinkHtml;\n",
-       "          element.appendChild(docLink);\n",
-       "        }\n",
-       "      </script>\n",
-       "    </div>\n",
-       "  </div>\n",
-       "  "
+       "</div>"
       ],
       "text/plain": [
        "   feature 0  feature 1  feature 2  feature 3  feature 4  feature 5  \\\n",
@@ -659,14 +500,13 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_csv = open('/content/gdrive/My Drive/Colab Notebooks/ML/Project/data/test.csv')\n",
-    "df_test = pd.read_csv(test_csv)\n",
+    "df_test = pd.read_csv('../../data/external/test.csv')\n",
     "print(df_test.shape) # (7177, 2305)\n",
     "df_test.head()"
    ]
@@ -693,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -730,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "ZClROtdQpw7s"
    },
@@ -751,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "xUCvV6fiozID"
    },
@@ -763,11 +603,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "jTVaBUzboidM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold:  1, Class dist.: [2516  268 2581 4545 3043 1998 3128], Acc: 0.435\n",
+      "Fold:  2, Class dist.: [2516  268 2581 4545 3043 1998 3128], Acc: 0.423\n",
+      "Fold:  3, Class dist.: [2516  268 2581 4545 3043 1998 3128], Acc: 0.425\n",
+      "Fold:  4, Class dist.: [2516  268 2581 4545 3043 1998 3128], Acc: 0.417\n",
+      "Fold:  5, Class dist.: [2517  268 2581 4545 3043 1998 3127], Acc: 0.445\n",
+      "Fold:  6, Class dist.: [2517  268 2581 4545 3043 1998 3127], Acc: 0.425\n",
+      "Fold:  7, Class dist.: [2517  268 2581 4545 3043 1998 3127], Acc: 0.427\n",
+      "Fold:  8, Class dist.: [2517  268 2581 4545 3043 1998 3127], Acc: 0.433\n",
+      "Fold:  9, Class dist.: [2516  269 2582 4545 3043 1998 3127], Acc: 0.408\n",
+      "Fold: 10, Class dist.: [2516  269 2582 4545 3042 1998 3128], Acc: 0.417\n",
+      "\n",
+      "CV accuracy: 0.425 +/- 0.010\n"
+     ]
+    }
+   ],
    "source": [
     "kfold = StratifiedKFold(n_splits=10).split(X_train, y_train)\n",
     "\n",
@@ -816,9 +675,6 @@
    },
    "outputs": [],
    "source": [
-    "pipe_svc = make_pipeline(MinMaxScaler(),\n",
-    "                         SVC(random_state=1))\n",
-    "\n",
     "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
     "\n",
     "param_grid = [{'svc__C': param_range, \n",
