preprocessing for the new dataset

--- a/notebooks/ivan/7.1-im-tensorflow.ipynb
+++ b/notebooks/ivan/7.1-im-tensorflow.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2d95c8a4-d805-4391-b28f-87d59b3e60e7",
    "metadata": {},
    "outputs": [
@@ -404,13 +404,7 @@
       "898/898 [==============================] - 4s 4ms/step - loss: 1.5729 - accuracy: 0.3876\n",
       "Epoch 80/100\n",
       "898/898 [==============================] - 4s 4ms/step - loss: 1.5656 - accuracy: 0.3916\n",
-      "Epoch 81/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 81/100\n",
       "898/898 [==============================] - 4s 4ms/step - loss: 1.5650 - accuracy: 0.3917\n",
       "Epoch 82/100\n",
       "898/898 [==============================] - 4s 4ms/step - loss: 1.5685 - accuracy: 0.3887\n",
@@ -718,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "d3b26bf4",
    "metadata": {},
    "outputs": [],
@@ -730,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "a67da41e",
    "metadata": {},
    "outputs": [],
@@ -741,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "7609f4d8",
    "metadata": {},
    "outputs": [],
@@ -753,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "4e6d81e5",
    "metadata": {},
    "outputs": [
