Add main data loading script. Change my file names.

--- a/notebooks/chikako/4.0_ML.ipynb
+++ b/notebooks/chikako/4.0_ML.ipynb
@@ -2,9 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true,
     "id": "33_yvSGdbB41"
    },
    "outputs": [],
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -258,7 +257,7 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -500,7 +499,7 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "id": "ZClROtdQpw7s"
    },
@@ -591,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "id": "xUCvV6fiozID"
    },
@@ -643,11 +642,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "G1tLRhB4otUf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV accuracy scores: [0.43504231 0.42309607 0.42458935 0.41712295 0.44549527 0.42458935\n",
+      " 0.42658039 0.43255351 0.40836653 0.41733068]\n",
+      "CV accuracy: 0.425 +/- 0.010\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(estimator=pipe_svc,\n",
     "                         X=X_train,\n",
@@ -675,13 +684,18 @@
    },
    "outputs": [],
    "source": [
-    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
-    "\n",
-    "param_grid = [{'svc__C': param_range, \n",
+    "param_gamma = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
+    "# param_gamma = [0.001, 0.01, 0.1, 1.0, 10.0]\n",
+    "param_c = [1, 5, 10]\n",
+    "param_grid = [{'svc__C': param_c, \n",
     "               'svc__kernel': ['linear']},\n",
-    "              {'svc__C': param_range, \n",
-    "               'svc__gamma': param_range, \n",
+    "              {'svc__C': param_c, \n",
+    "               'svc__gamma': param_gamma, \n",
     "               'svc__kernel': ['rbf']}]\n",
+    "# param_grid = [{'svc__C': param_c, \n",
+    "#                'svc__gamma': param_gamma, \n",
+    "#                'svc__kernel': ['rbf']}]\n",
+    "\n",
     "\n",
     "gs = GridSearchCV(estimator=pipe_svc, \n",
     "                  param_grid=param_grid, \n",
