--- a/notebooks/chikako/4.0_ML.ipynb
+++ b/notebooks/chikako/4.0_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "id": "33_yvSGdbB41"
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28698, 2305)\n"
+      "(28709, 2)\n"
      ]
     },
     {
@@ -76,188 +76,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>feature 0</th>\n",
-       "      <th>feature 1</th>\n",
-       "      <th>feature 2</th>\n",
-       "      <th>feature 3</th>\n",
-       "      <th>feature 4</th>\n",
-       "      <th>feature 5</th>\n",
-       "      <th>feature 6</th>\n",
-       "      <th>feature 7</th>\n",
-       "      <th>feature 8</th>\n",
-       "      <th>feature 9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>feature 2295</th>\n",
-       "      <th>feature 2296</th>\n",
-       "      <th>feature 2297</th>\n",
-       "      <th>feature 2298</th>\n",
-       "      <th>feature 2299</th>\n",
-       "      <th>feature 2300</th>\n",
-       "      <th>feature 2301</th>\n",
-       "      <th>feature 2302</th>\n",
-       "      <th>feature 2303</th>\n",
        "      <th>emotion</th>\n",
+       "      <th>pixels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>108</td>\n",
-       "      <td>83</td>\n",
-       "      <td>63</td>\n",
-       "      <td>65</td>\n",
-       "      <td>89</td>\n",
-       "      <td>111</td>\n",
-       "      <td>121</td>\n",
-       "      <td>121</td>\n",
-       "      <td>125</td>\n",
-       "      <td>111</td>\n",
-       "      <td>...</td>\n",
-       "      <td>140</td>\n",
-       "      <td>131</td>\n",
-       "      <td>121</td>\n",
-       "      <td>119</td>\n",
-       "      <td>115</td>\n",
-       "      <td>111</td>\n",
-       "      <td>116</td>\n",
-       "      <td>122</td>\n",
-       "      <td>122</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70 80 82 72 58 58 60 63 54 58 60 48 89 115 121...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>137</td>\n",
-       "      <td>142</td>\n",
-       "      <td>159</td>\n",
-       "      <td>162</td>\n",
-       "      <td>158</td>\n",
-       "      <td>134</td>\n",
-       "      <td>113</td>\n",
-       "      <td>167</td>\n",
-       "      <td>174</td>\n",
-       "      <td>177</td>\n",
-       "      <td>...</td>\n",
-       "      <td>76</td>\n",
-       "      <td>98</td>\n",
-       "      <td>172</td>\n",
-       "      <td>196</td>\n",
-       "      <td>192</td>\n",
-       "      <td>191</td>\n",
-       "      <td>191</td>\n",
-       "      <td>192</td>\n",
-       "      <td>192</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>151 150 147 155 148 133 111 140 170 174 182 15...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>111</td>\n",
-       "      <td>148</td>\n",
-       "      <td>155</td>\n",
-       "      <td>167</td>\n",
-       "      <td>181</td>\n",
-       "      <td>191</td>\n",
-       "      <td>194</td>\n",
-       "      <td>193</td>\n",
-       "      <td>195</td>\n",
-       "      <td>199</td>\n",
-       "      <td>...</td>\n",
-       "      <td>152</td>\n",
-       "      <td>199</td>\n",
-       "      <td>190</td>\n",
-       "      <td>121</td>\n",
-       "      <td>58</td>\n",
-       "      <td>59</td>\n",
-       "      <td>57</td>\n",
-       "      <td>56</td>\n",
-       "      <td>60</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>231 212 156 164 174 138 161 173 182 200 106 38...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>151</td>\n",
-       "      <td>156</td>\n",
-       "      <td>121</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
-       "      <td>116</td>\n",
-       "      <td>151</td>\n",
-       "      <td>169</td>\n",
-       "      <td>183</td>\n",
-       "      <td>185</td>\n",
-       "      <td>...</td>\n",
-       "      <td>198</td>\n",
-       "      <td>196</td>\n",
-       "      <td>197</td>\n",
-       "      <td>200</td>\n",
-       "      <td>203</td>\n",
-       "      <td>205</td>\n",
-       "      <td>171</td>\n",
-       "      <td>33</td>\n",
-       "      <td>32</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24 32 36 30 32 23 19 20 30 41 21 22 32 34 21 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>248</td>\n",
-       "      <td>187</td>\n",
-       "      <td>149</td>\n",
-       "      <td>130</td>\n",
-       "      <td>97</td>\n",
-       "      <td>140</td>\n",
-       "      <td>139</td>\n",
-       "      <td>117</td>\n",
-       "      <td>197</td>\n",
-       "      <td>251</td>\n",
-       "      <td>...</td>\n",
-       "      <td>72</td>\n",
-       "      <td>69</td>\n",
-       "      <td>76</td>\n",
-       "      <td>98</td>\n",
-       "      <td>123</td>\n",
-       "      <td>171</td>\n",
-       "      <td>195</td>\n",
-       "      <td>200</td>\n",
-       "      <td>194</td>\n",
-       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 2305 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   feature 0  feature 1  feature 2  feature 3  feature 4  feature 5  \\\n",
-       "0        108         83         63         65         89        111   \n",
-       "1        137        142        159        162        158        134   \n",
-       "2        111        148        155        167        181        191   \n",
-       "3        151        156        121        100         80        116   \n",
-       "4        248        187        149        130         97        140   \n",
-       "\n",
-       "   feature 6  feature 7  feature 8  feature 9  ...  feature 2295  \\\n",
-       "0        121        121        125        111  ...           140   \n",
-       "1        113        167        174        177  ...            76   \n",
-       "2        194        193        195        199  ...           152   \n",
-       "3        151        169        183        185  ...           198   \n",
-       "4        139        117        197        251  ...            72   \n",
-       "\n",
-       "   feature 2296  feature 2297  feature 2298  feature 2299  feature 2300  \\\n",
-       "0           131           121           119           115           111   \n",
-       "1            98           172           196           192           191   \n",
-       "2           199           190           121            58            59   \n",
-       "3           196           197           200           203           205   \n",
-       "4            69            76            98           123           171   \n",
-       "\n",
-       "   feature 2301  feature 2302  feature 2303  emotion  \n",
-       "0           116           122           122        3  \n",
-       "1           191           192           192        3  \n",
-       "2            57            56            60        3  \n",
-       "3           171            33            32        3  \n",
-       "4           195           200           194        3  \n",
-       "\n",
-       "[5 rows x 2305 columns]"
+       "   emotion                                             pixels\n",
+       "0        0  70 80 82 72 58 58 60 63 54 58 60 48 89 115 121...\n",
+       "1        0  151 150 147 155 148 133 111 140 170 174 182 15...\n",
+       "2        2  231 212 156 164 174 138 161 173 182 200 106 38...\n",
+       "3        4  24 32 36 30 32 23 19 20 30 41 21 22 32 34 21 1...\n",
+       "4        6  4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -499,7 +361,7 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -555,8 +417,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28698, 2304)\n",
-      "(28698,)\n"
+      "(28709, 2)\n",
+      "(28709,)\n"
      ]
     }
    ],
@@ -569,7 +431,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7177, 2304)\n",
+      "(7177,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = df_test.iloc[:, 0:2304].values\n",
+    "y = df_test.iloc[:, -1].values\n",
+    "print(X.shape)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "id": "ZClROtdQpw7s"
    },
@@ -577,6 +460,26 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.3, random_state=1, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y_train)"
    ]
   },
   {
